# sidekick-dashboard

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  index.html  package.json  pnpm-lock.yaml  shell.nix  tailwind.config.js  tsconfig.json  vite.config.ts
nix/: node-packages.nix
src/: App.tsx  config.rs  global.css  index.tsx  lib.rs  main.qml  main.rs  resources.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Clock.tsx  FocusMode.tsx  TaskList.tsx
src/components/Tasks/: TaskItem.tsx  TaskList.tsx  _update.spec.ts  index.tsx  types.ts  update.ts
src/model/: clock.rs  config.rs  daily.rs  mod.rs  tasks.rs
src/model/utils/: task.rs
src/utils/: _helpers.spec.ts  adt.ts  helpers.ts  solid.ts
src/widgets/: Checkbox.qml  Clock.qml  FocusMode.qml  IdleAnimations.qml  TaskList.qml
