[package]
name = "sidekick_dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = { version = "0.2.7", features = ["webengine"] }
cstr = "0.2.10"
cpp = "0.5.6"
chrono = "0.4.19"
serde = { version = "1.0.140", features = ["derive"] }
serde_yaml = "0.9.2"

[build-dependencies]
cpp_build = "0.5.6"
