[package]
name = "sidekick-dashboard"
version = "0.0.0"
description = "A Tauri App"
authors = ["Akshay Nair <phenax5@gmail.com>"]
license = "MIT"
repository = "https://github.com/phenax/sidekick-dashboard"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9.17"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
